add reuseContainer to html2canvas

--- a/examples/existing_canvas.html
+++ b/examples/existing_canvas.html
@@ -15,22 +15,29 @@
             background: rgba(100, 255, 255, 0.5);
             padding: 50px 10px;
         }
+        #clean-count{
+            color:red;
+        }
     </style>
 </head>
 <body>
 <div><h1>HTML content to render:</h1>
-    <div id="content">Render the content in this element <strong>only</strong> onto the existing canvas element</div>
+    <div id="content">
+        Render the content in this element <strong>only</strong> onto the existing canvas element
+        <div> actions-count : <span id="clean-count"> 0</span></div>
+    </div>
 </div>
 <h1>Existing canvas:</h1>
 <canvas width="500" height="200"></canvas>
 <script type="text/javascript" src="../dist/html2canvas.js"></script>
-<button>Run html2canvas</button>
+<button onclick='capture()'>Run html2canvas</button>
+<button onclick='clean()'>Clean html2canvas</button>
+
 <script type="text/javascript">
     var canvas = document.querySelector("canvas");
     var ctx = canvas.getContext("2d");
 
-    var ctx = canvas.getContext('2d');
-
+ 
     ctx.beginPath();
     ctx.arc(75,75,50,0,Math.PI*2,true); // Outer circle
     ctx.moveTo(110,75);
@@ -41,11 +48,20 @@
     ctx.arc(90,65,5,0,Math.PI*2,true);  // Right eye
     ctx.stroke();
 
-    document.querySelector("button").addEventListener("click", function() {
-        html2canvas(document.querySelector("#content"), {canvas: canvas}).then(function(canvas) {
+    function clean(){
+         ctx.clearRect(0, 0, canvas.width,  canvas.height);
+         document.querySelector('#clean-count').innerText = parseInt(document.querySelector('#clean-count').innerText)+1;
+    }
+
+
+    function capture(){
+    
+        document.querySelector('#clean-count').innerText = parseInt(document.querySelector('#clean-count').innerText)+1;
+
+        html2canvas(document.querySelector("#content"), {canvas: canvas, reuseContainer: true}).then(function(canvas) {
             console.log('Drew on the existing canvas');
         });
-    }, false);
+    }
 
 </script>
 </body>
